feat: initial release of EMT Calculator Tools v1.0.0
- O₂ Tank Duration Calculator with safety reserves and UF medical citations
- i-gel Size Calculator with manufacturer colors and weight guidelines
- Glasgow Coma Scale Calculator with pediatric and adult scoring
- APGAR Score Calculator for delivery calls with clinical guidance
- Vital Signs Assessment with age-based normal ranges
- Vital Signs Reference tables for field use
- Progressive Web App with offline support and service worker
- Mobile-responsive design with hamburger navigation
- Dark/Light theme support with system preference detection
- Medical citations system with proper clinical references
- Buy Me a Coffee integration for project support
- Comprehensive TypeScript definitions for medical safety
- Dynamic tool registry system with featured tool management
- Semantic versioning and Git workflow documentation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "emt-calculators",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "Essential calculators and reference tools for Emergency Medical Technicians, Advanced EMTs, and Paramedics",
+  "author": "Austin Cole",
+  "license": "SEE LICENSE IN LICENSE.txt",
+  "homepage": "https://emt-calc.pages.dev",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ATCUSA/emt-calculators.git"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -9,6 +17,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "astro": "^5.17.1",
+    "@astrojs/svelte": "^7.2.5",
+    "@tailwindcss/vite": "^4.1.18",
+    "svelte": "^5.0.0",
+    "tailwindcss": "^4.1.18",
+    "lucide-svelte": "^0.468.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2",
+    "@types/serviceworker": "^0.0.95"
   }
 }
