--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@astrojs/svelte": "^7.2.5",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@types/serviceworker": "^0.0.191",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^4.0.18"
   }
 }
